packages/reference/client/scss/60_components/_c-product-listing-filter.scss
.c-product-listing-filter {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  transition: right 0.25s;
  width: 100%;
  overflow-y: scroll;
  z-index: $modal-z-index;
  padding: 3.5rem 2.5% $global-spacing-unit 2.5%; /* margin for fixed header title, 95% width, general spacing for bottom */
  font-size: 0.85em;
  background-color: $background-white;

  &--hide {
    right: 100%;
  }

  &__header-title {
    position: fixed;
    top: 0;
    z-index: $modal-z-index + 1;

    background-color: $background-white;
    width: 95%;
    border-bottom: 1px solid $border-default;

    h2 {
      margin: 1rem auto; /* Normalizing this h2 margins so it's easier to manage the margin at the top of the page */
    }
  }

  &-close {
    float: right;
    height: auto;
    width: 4rem;
    background: transparent;
    border: none;
    cursor: pointer;
    opacity: 0.5;

    &:hover {
      opacity: 1;
    }

    &:active, &:focus {
      border-style: none;
    }

    &:before, &:after {
      position: absolute;
      margin: auto;
      padding: auto;
      height: 2rem;
      margin-top: -0.25rem; /* Minus half the difference between the height and the h2 font size 2rem - 1.5rem */
      width: 2px;
      content: ' ';
      background-color: #333;
    }

    &:before {
      transform: rotate(45deg);
    }

    &:after {
      transform: rotate(-45deg);
    }
  }

  &__body {
    &-option {
      border-top: 1px solid $border-default;
    }
  }
}

